infra/k8s-dev/mailhog-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog:v1.0.1
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog-srv
spec:
  selector:
    app: mailhog
  ports:
    - name: front-end-mail
      protocol: TCP
      port: 8025
      targetPort: 8025
    - name: backend-end-mail
      protocol: TCP
      port: 1025
      targetPort: 1025
